--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
   <body>
+    <header class="header">
+      <nav>
+        <ul>
+          <li><a href="https://github.com/mgetz34">Github</a></li>
+          <li><a href="0">Portfolio</a></li>
+          <li><a href="0">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <h1></h1>
+      <section>
+        <h1>My New Website</h1>
+      </section>
+      <section>
+        <h1>Contact Me</h1>
+      </section>
     </main>
   </body>
 </html>
