edited html and css files adding a border to the top header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header class="header">
       <nav>
         <ul>
-          <li><a href="https://github.com/mgetz34">Github</a></li>
+          <li>
+            <a href="https://github.com/mgetz34" target="_blank">Github</a>
+          </li>
           <li><a href="0">Portfolio</a></li>
           <li><a href="0">Contact</a></li>
         </ul>
